Capture top N slowest scan paths and scan metrics by region